[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4.0.22", features = ["derive"] }
indextree = "4.5.0"
indoc = "1.0.7"
nom = "7"
fxhash = "0.2.1"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["default", "html_reports"] }

[[bin]]
name = "aoc_2022"
path = "src/main.rs"

[[bench]]
name = "aoc_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

