[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
fxhash = "0.2"
indextree = "4.5"
indoc = "1"
itertools = "0.10"
ndarray = "0.15"
nom = "7"
rayon = "1.6"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["default", "html_reports"] }

[[bin]]
name = "aoc_2022"
path = "src/main.rs"

[[bench]]
name = "aoc_bench"
harness = false

[profile.release]
lto = true
codegen-units = 1

